# sklep-ds-bot

./: .env.example  .gitignore  AGENTS_README.md  CODEX_WORKLOG.md  COMMANDS.md  Dockerfile  EXAMPLES.md  README.md  docker-compose.yml  go.mod  go.sum  pyproject.toml  stack.yaml
.github/workflows/: ci.yml  pr-lint.yml  release.yml
cmd/commands/: README.md  main.go
cmd/gateway/: README.md  main.go
cmd/shuffle/: README.md  main.go  main_test.go
cmd/tracker/: README.md  main.go
cmd/writer/: README.md  main.go
docs/: README.md  command-rewrite-python-migration-plan.md  discord-command-ux-research.md  problem-review-plan-2026-04-25.md
services/: __init__.py  activity.py  commands.py  gateway.py  shuffle.py  stalker.py  tracker.py  writer.py
tests/: test_appcommands.py  test_botauth.py  test_bus.py  test_commands.py  test_config.py  test_gateway.py  test_mvp_command_catalog.py  test_mvp_registration_and_settings.py  test_mvp_userinfo_dashboard.py  test_regression_plan_routes.py  test_repository_invite_attribution.py  test_repository_read_models.py  test_services_activity.py  test_services_commands_dashboard.py  test_services_commands_routing.py  test_services_commands_userinfo.py  test_services_gateway.py  test_services_stalker.py  test_shuffle.py  test_summary.py  test_tracker.py
voice_tracker/: __init__.py  appcommands.py  botauth.py  bus.py  commands.py  config.py  discord_models.py  domain.py  gateway.py  repository.py  runtime.py  shuffle.py  summary.py  timeutil.py  tracker.py
voice_tracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+37 files in other folders)
